--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
-  "name": "VideoChatApp",
-  "version": "0.0.0",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "serve": "vite preview"
-  },
-  "dependencies": {
-    "firebase": "^8.3.1",
-    "grommet": "^2.17.0",
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0",
-    "styled-components": "^5.2.1"
-  },
-  "devDependencies": {
-    "@vitejs/plugin-react-refresh": "^1.3.1",
-    "vite": "^2.1.0"
-  }
+    "name": "philvidchat",
+    "version": "0.0.0",
+    "scripts": {
+        "dev": "vite",
+        "build": "vite build",
+        "serve": "vite preview"
+    },
+    "dependencies": {
+        "firebase": "^8.3.1",
+        "grommet": "^2.17.0",
+        "react": "^17.0.0",
+        "react-dom": "^17.0.0",
+        "styled-components": "^5.2.1"
+    },
+    "devDependencies": {
+        "@vitejs/plugin-react-refresh": "^1.3.1",
+        "vite": "^2.1.0"
+    }
 }
