--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "grommet": "^2.17.0",
         "react": "^17.0.0",
         "react-dom": "^17.0.0",
+        "react-router-dom": "^5.2.0",
         "styled-components": "^5.2.1"
     },
     "devDependencies": {
