--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dependencies": {
         "firebase": "^8.3.1",
         "grommet": "^2.17.0",
+        "query-string": "^7.0.0",
         "react": "^17.0.0",
         "react-dom": "^17.0.0",
         "react-router-dom": "^5.2.0",
